// ──────────────────────────────────────
// Enums
// ──────────────────────────────────────

Enum jlpt_level {
  N5
  N4
  N3
  N2
  N1
}

Enum card_status {
  new
  learning
  reviewing
  mastered
}

// ──────────────────────────────────────
// Better Auth tables
// ──────────────────────────────────────

Table user {
  id text [pk]
  name text [not null]
  email text [not null, unique]
  email_verified boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table session {
  id text [pk]
  expires_at timestamp [not null]
  token text [not null, unique]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  ip_address text
  user_agent text
  user_id text [not null]

  indexes {
    user_id [name: 'session_userId_idx']
  }
}

Table account {
  id text [pk]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null]
  access_token text
  refresh_token text
  id_token text
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope text
  password text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id [name: 'account_userId_idx']
  }
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    identifier [name: 'verification_identifier_idx']
  }
}

Table user_subscription {
  id text [pk]
  user_id text [not null]
}

// ──────────────────────────────────────
// Content tables (admin-managed)
// ──────────────────────────────────────

Table words {
  id uuid [pk, default: `gen_random_uuid()`]
  kanji varchar(100)
  kana varchar(100) [not null]
  romaji varchar(100)
  english text [not null]
  part_of_speech varchar(50)
  word_group integer [not null]
  level jlpt_level [not null]
  display_order integer [not null, default: 0]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    level [name: 'idx_words_level']
    (level, word_group) [name: 'idx_words_level_group']
    (level, display_order) [name: 'idx_words_level_order']
  }
}

Table courses {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(200) [not null]
  description text
  display_order integer [not null]
  is_published boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table lessons {
  id uuid [pk, default: `gen_random_uuid()`]
  course_id uuid [not null]
  content text [not null]
  image_url text
  display_order integer [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    course_id [name: 'idx_lessons_course']
    (course_id, display_order) [name: 'idx_lessons_course_order']
  }
}

Ref: lessons.course_id > courses.id [delete: cascade]

// ──────────────────────────────────────
// User progress tables
// ──────────────────────────────────────

Table user_progress {
  user_id text [pk]
  streak_count integer [not null, default: 0]
  last_review_date date
  hiragana_quiz_passed boolean [not null, default: false]
  katakana_quiz_passed boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table user_word_progress {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  word_id uuid [not null]
  status card_status [not null, default: 'new']
  ease_factor real [not null, default: 2.5]
  interval integer [not null, default: 0]
  repetitions integer [not null, default: 0]
  next_review_date timestamp [not null]
  times_correct integer [not null, default: 0]
  times_incorrect integer [not null, default: 0]
  last_reviewed_at timestamp
  added_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, word_id) [unique, name: 'unique_user_word']
    (user_id, next_review_date) [name: 'idx_userwords_user_nextreview']
    (user_id, status) [name: 'idx_userwords_user_status']
  }
}

Table reviews {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  user_word_id uuid [not null]
  was_correct boolean [not null]
  previous_interval integer [not null]
  new_interval integer [not null]
  previous_status card_status [not null]
  new_status card_status [not null]
  time_spent integer
  reviewed_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, reviewed_at) [name: 'idx_reviews_user_reviewedat']
    (user_word_id, reviewed_at) [name: 'idx_reviews_userword_reviewedat']
  }
}

 Table user_course_progress {
   id uuid [pk, default: `gen_random_uuid()`]
   user_id text [not null]
   course_id uuid [not null]
   current_lesson_id uuid
   started_at timestamp
   completed_at timestamp
   created_at timestamp [not null, default: `now()`]
   updated_at timestamp [not null, default: `now()`]

   indexes {
     (user_id, course_id) [unique, name: 'unique_user_course']
   }
 }

  Ref: user_course_progress.user_id > user.id [delete: cascade]
  Ref: user_course_progress.course_id > courses.id [delete: cascade]
  Ref: user_course_progress.current_lesson_id > lessons.id
// ──────────────────────────────────────

// ──────────────────────────────────────
// References (foreign keys)
// ──────────────────────────────────────

// Auth
Ref: session.user_id > user.id [delete: cascade]
Ref: account.user_id > user.id [delete: cascade]

// User progress
Ref: user_progress.user_id > user.id [delete: cascade]

// User words & reviews
Ref: user_word_progress.user_id > user.id [delete: cascade]
Ref: user_word_progress.word_id > words.id [delete: cascade]
Ref: reviews.user_id > user.id [delete: cascade]
Ref: reviews.user_word_id > user_word_progress.id [delete: cascade]
